--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,4 +3,4 @@ COPY . .
 RUN python -m pip install --upgrade pip
 RUN pip install -r requirements.txt
 WORKDIR /app
-CMD gunicorn --bind 0.0.0.0:5000 --chdir /app app:app
+CMD gunicorn --bind localhost:3306 --chdir /app app:app
