--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     build: ./
     restart: always
     env_file:
-      - .env
+      - .env.local
     ports:
-      - "5000"
+      - "5000:80"
     volumes:
       - /tmp:/tmp
   
