--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,14 +1,14 @@
 version: '3'
 services:
   app:
-    build: ./
+    build: .
     restart: always
     env_file:
       - .env.local
     ports:
       - "5000:80"
     volumes:
-      - /tmp:/tmp
+      - .:/app
   
   nginx:
     image: nginx:latest
