still not working

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,5 +3,5 @@ WORKDIR /app
 COPY . .
 RUN python -m pip install --upgrade pip
 RUN pip install -r requirements.txt
-# CMD gunicorn --bind localhost:5000 --chdir /app app:app
-CMD ["python", "app.py"]
+CMD gunicorn --bind localhost:5000 --chdir /app app:app
+# CMD ["python", "app.py"]
