--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,6 @@
-FROM python:3.8-slim
+FROM python:3.9-slim
 WORKDIR /app
 COPY . .
 RUN python -m pip install --upgrade pip
 RUN pip install -r requirements.txt
-CMD gunicorn --bind localhost:5000 --chdir /app app:app
-# CMD ["python", "app.py"]
+CMD gunicorn --bind 0.0.0.0:5000 --chdir /app app:app
