--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,14 +1,16 @@
 version: '3'
 services:
   app:
-    build: .
+    build: 
+      context: ./
+      dockerfile: Dockerfile
     restart: always
     env_file:
       - .env.local
     ports:
-      - "5000:80"
+      - "5000:5000"
     volumes:
-      - .:/app
+      - /tmp:/tmp
   
   nginx:
     image: nginx:latest
