--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,11 +15,11 @@ SQLAlchemy
 PyYAML==6.0
 Flask-RESTful==0.3.9
 Flask-SQLAlchemy==3.0.0
-flask_cors==3.0.10
+flask_cors
 PyJWT==2.6.0
-flask_bcrypt==1.0.1
+flask_bcrypt
 mailjet_rest==1.3.4
-flask_mail==0.9.1
+flask_mail
 razorpay==1.3.0
 gunicorn==20.1.0
 pyuwsgi==2.0.20
@@ -33,3 +33,4 @@ numpy
 h5py==2.10.0
 nltk
 scikit-learn
+
