--- a/backend/.env.local
+++ b/backend/.env.local
@@ -1,3 +1,4 @@
+# DB_URL='mysql+mysqlconnector://root:yogesh123@glcaptest-instance.cuhu1ubero6u.us-east-1.rds.amazonaws.com/glcaptest'
 DB_URL='mysql+mysqlconnector://root:yogesh@localhost/glcaptest'
 DB_CONN='localhost'
 DB_NAME='glcaptest'
