frontend changes for deployment

--- a/frontend/uwsgi.ini
+++ b/frontend/uwsgi.ini
@@ -1,5 +1,8 @@
 [uwsgi]
-module = main
-callable = app
+module = main:app
 master = true
-touch-reload = /app/uwsgi.ini
+processes = 5
+socket = 0.0.0.0:56733
+chmod-socket = 660
+vacuum = true
+die-on-term = true
